<resources>
    <string name="app_name">Test Ecommerce</string>
    <string name="best_seller">Best Seller</string>
    <string name="see_more">see more</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="this_is_a_new_item">This is a new item</string>
    <string name="buy_now">Buy now!</string>
    <string name="the_picture_of_the_item">the picture of the item</string>
    <string name="picture_of_the_product">Picture of the product</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="others">Others</string>
    <string name="filters">Filters</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="filter_options">Filter options</string>
    <string name="cancel_filter_options">Cancel filter options</string>
    <string name="apply_filter_options">Apply filter options</string>
    <string name="list_of_brands">List of brands</string>
    <string name="list_of_prices">List of prices</string>
    <string name="list_of_sizes">List of sizes</string>
    <string name="ecommerce_splash_screen_logo">Ecommerce splash screen logo</string>
    <string name="image_of_selected_product">Image of selected product</string>
    <string name="product_details">Product Details</string>
    <string name="back_to_the_main_screen_button">Back to the main screen button</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="cpu_image">CPU image</string>
    <string name="camera_image">Camera image</string>
    <string name="cd_image">Cd image</string>
    <string name="product_details_rom">Product details ROM</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="product_color_1">Product color 1</string>
    <string name="product_color_2">Product color 2</string>
    <string name="add_to_cart_button">Add to cart button</string>
    <string name="my_cart">My Cart</string>
    <string name="picture_of_product_in_the_cart">Picture of product in the cart</string>
    <string name="decrease_number_of_the_product_in_the_cart">Decrease number of the product in the cart</string>
    <string name="increase_number_of_the_product_in_the_cart">Increase number of the product in the cart</string>
    <string name="put_the_product_into_the_bin">Put the product into the bin</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout_action">Checkout</string>

    <string-array name="filter_brand">
        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Apple</item>
        <item>Motorola</item>
    </string-array>

    <string-array name="filter_price">
        <item>$01- $100</item>
        <item>$101 - $300</item>
        <item>$301 - $500</item>
        <item>$501 - $800</item>
        <item>$801 - $1000</item>
        <item>$1001 - $10000</item>
    </string-array>

    <string-array name="filter_size">
        <item>4.5 to 5.5 inches</item>
        <item>more than 5.5 inches</item>
        <item>less than 4.5 inches</item>
    </string-array>
</resources>